--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#3f51b5" />
+    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="SecureProctor - Privacy-Preserving Online Assessment System"
+      content="Secure Online Exam Proctoring System"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>SecureProctor</title>
+    <title>Secure Proctor</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
-</html> 
+</html>
